Fix checkboxgroup with search causing layout shifts when opened

--- a/src/components/CustomExtendedDataField/CustomExtendedDataField.module.css
+++ b/src/components/CustomExtendedDataField/CustomExtendedDataField.module.css
@@ -2,7 +2,6 @@
 
 .customField {
   position: relative;
-  z-index: 1;
   margin-bottom: 24px;
 
   &:last-child {
