--- a/src/components/FieldCheckboxGroup/FieldCheckboxGroup.module.css
+++ b/src/components/FieldCheckboxGroup/FieldCheckboxGroup.module.css
@@ -123,7 +123,7 @@ input:focus {
 }
 
 .itemsVisible {
-  position: relative;
+  position: absolute;
   display: block;
   z-index: 999;
 }
